<resources>
    <string name="commons_error_title">We hit a bump</string>
    <string name="commons_error_message">Something went wrong.Please try again.</string>
    <string name="common_network_msg">Unstable internet connection. Please try again later.</string>
    <string name="common_something_went_wrong_msg">Something went wrong. Please try again later.</string>
    <string name="login_email_hint">Phone Number</string>
    <string name="login_password_hint">Password</string>
    <string name="login_txt">Login</string>
    <string name="menu_home_title">Home</string>
    <string name="menu_articles_title">Articles</string>
    <string name="create_article_txt">Create Article</string>
    <string name="sample_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="logout_loading_lbl">Logging out…</string>
    <string name="logout_title_lbl">We hate to see you leave.</string>
    <string name="logout_desc_lbl">Continue signing out?</string>
    <string name="logout_btn">Logout</string>
    <string name="logout_cancel_btn">Cancel</string>
    <string name="login_loading">Logging in...</string>
    <string name="create_article_loading">Creating Article...</string>
    <string name="menu_wallet_title">Wallet</string>
    <string name="menu_groups_title">Groups</string>
    <string name="menu_history_title">Notifications</string>
    <string name="menu_settings_title">Settings</string>
    <string name="login_to_your_account_lbl">Login to Your Account</string>
    <string name="lbl_forgot_pass">Forgot your password?</string>
    <string name="lbl_password_reset">Password reset.</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_middle_name">Middle Name</string>
    <string name="lbl_last_name">Last Name</string>
    <string name="lbl_contact_number">Contact Number</string>
    <string name="lbl_9xx_xxx_xxxx">9XX XXX XXXX</string>
    <string name="lbl_63">+63</string>
    <string name="lbl_nominate_password">Nominate Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_0">0</string>
    <string name="lbl_2">2</string>
    <string name="lbl_code_has_been_sent_to_your_phone_number">Code has been sent to your phone number</string>
    <string name="lbl_second_s">second/s</string>
    <string name="lbl_resend_code_in">Resend code in</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_primary_info">Primary Information</string>
    <string name="lbl_reg_otp">Confirm OTP</string>
    <string name="lbl_reg_complete_profile">Complete Profile</string>
    <string name="lbl_update_profile">Update Profile</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_province">Province</string>
    <string name="lbl_city_municipality">City/Municipality</string>
    <string name="lbl_barangay">Barangay</string>
    <string name="lbl_street">Street</string>
    <string name="account_created">Account Created!</string>
    <string name="lbl_my_account">My Account</string>
    <string name="lbl_zipcode">Zipcode</string>
    <string name="home_membership_card_text">Request Badge</string>
    <string name="home_name_text">Name</string>
    <string name="home_name_hint">Juan Dela Cruz</string>
    <string name="home_date_of_birth_text">Date of Birth</string>
    <string name="home_date_of_birth_hint">01-01-2023</string>
    <string name="home_address_text">Address</string>
    <string name="home_id_no_text">ID No.</string>
    <string name="home_address_hint">29D San Isidro, Kapitolyo, Pasig City</string>
    <string name="home_id_no_hint">LC-000123</string>
    <string name="home_date_issued_text">Date Issued</string>
    <string name="home_date_issued_hint">07-18-2023</string>
    <string name="my_wallet_title">My Wallet</string>
    <string name="wallet_points_hint">Loading…</string>
    <string name="wallet_pts_text">pts</string>
    <string name="wallet_available_balance_text">Available Balance</string>
    <string name="wallet_cash_in_text">Top Up Points</string>
    <string name="wallet_send_text">Send Points</string>
    <string name="wallet_points_text">Points</string>
    <string name="wallet_scan_text">Scan</string>
    <string name="wallet_scan_2_text">Scan2Pay</string>
    <string name="wallet_2_pay_text">2 Pay</string>
    <string name="wallet_post_text">Post</string>
    <string name="wallet_request_text">Request</string>
    <string name="wallet_transactions_text">Transactions</string>
    <string name="lbl_your_groups">Your Groups</string>
    <string name="lbl_invites">Pending Requests</string>
    <string name="lbl__10_members">10 Members</string>
    <string name="lbl_join">Join</string>
    <string name="request_posted_title">Request Posted</string>
    <string name="request_posted_requested_points_text">Requested Points</string>
    <string name="scanner_scan_2_pay_title">Scan 2 Pay</string>
    <string name="scanner_desc">Align the QR code to scan</string>
    <string name="request_posted_to_text">To</string>
    <string name="request_posted_date_text">Date</string>
    <string name="request_posted_amount_text">Amount</string>
    <string name="request_posted_refid_text">Refid</string>
    <string name="request_posted_reason_text">Reason</string>
    <string name="request_points_title">Request Points</string>
    <string name="post_request_title">Post Request</string>
    <string name="confirm_request_malasakit_family_text">Malasakit Family</string>
    <string name="confirm_request_to_text">To: </string>
    <string name="cash_in_title">Top Up Lions Care Points</string>
    <string name="payment_method_title">Choose Payment Method</string>
    <string name="payment_method_ziapay_text">ZiaPay</string>
    <string name="inbound_outbound_hint">Received 100 credits - Zyla Valerie REFID: 003254300001 2023-07-04 3:59 PM</string>
    <string name="received_hint">Received 100 credits</string>
    <string name="refid_hint">003254300001</string>
    <string name="date_and_time_hint">2023-07-04 3:59 PM</string>
    <string name="inbound_title">Inbound</string>
    <string name="outbound_title">Outbound</string>
    <string name="inbound_outbound_refid_text">REFID:</string>
    <string name="menu_search_text">Search</string>
    <string name="home_immediate_family_group_text">Immediate Family</string>
    <string name="lbl_100_00">+100.00</string>
    <string name="notif_badge_text">You received a badge</string>
    <string name="notif_remarks_text">KYC process completed</string>
    <string name="wallet_view_all_text">View All</string>
    <string name="top_up_h1_text">100</string>
    <string name="top_up_h2_text">200</string>
    <string name="top_up_h5_text">500</string>
    <string name="top_up_k1_text">1,000</string>
    <string name="top_up_k2_text">2,000</string>
    <string name="top_up_k5_text">5,000</string>
    <string name="top_up_k10_text">10,000</string>
    <string name="lbl_if_000001">IF-000001</string>
    <string name="lbl_immediate_family">Immediate Family</string>
    <string name="lbl_organization">Organization</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_type_influencer_text">Influencer</string>
    <string name="account_type_npo_text">Non-Profit Organization</string>
    <string name="select_account_type_title">Select Badge Type</string>
    <string name="account_type_public_servant_text">Public Official</string>
    <string name="verify_badge_documents_title">Badge Documents</string>
    <string name="account_type_title">Account Type</string>
    <string name="verify_supporting_document_1_text">Supporting Document 1</string>
    <string name="verify_supporting_document_2_text">Supporting Document 2</string>
    <string name="account_type_error_message_text">Please select account type</string>
    <string name="verify_select_document_text">Select Document</string>
    <string name="payment_method_bal_text">Bal </string>
    <string name="payment_method_online_text">Online</string>
    <string name="home_not_verified_message">Your Account \nis not yet verified</string>
    <string name="home_get_verified_text">Get Verified</string>
    <string name="wallet_recipient_title">Recipient</string>
    <string name="wallet_message_title">Message (Optional)</string>
    <string name="wallet_enter_your_message_hint">Enter your message \neg. Happy Birthday, Merry Christmas, etc.</string>
    <string name="wallet_enter_id_number_hint">Enter ID Number</string>
    <string name="lbl_submit">Submit</string>
    <string name="upload_proof_of_address_text">Upload Proof of Address</string>
    <string name="upload_proof_of_address_note_text">Please make sure that every detail in the document uploaded is clearly visible.</string>
    <string name="proof_of_address_select_document_type_title">Select Document Type</string>
    <string name="proof_of_address_note_text">We kindly request a photograph of an official document as proof of your address to proceed with the identity verification process.</string>
    <string name="select_proof_of_address">Select Proof of Address</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="delete_account_permanently">Delete Account Permanently</string>
    <string name="von_denuelle_deactivate_this_account">Von Denuelle, deactivate this account?</string>
    <string name="if_you_deactivate_your_account">If you deactivate your account:</string>
    <string name="you_can_reactivate_your_account_anytime_by_using_the_same_login_detals">• You can reactivate your account anytime by using the same login detals.</string>
    <string name="agricare_will_continue_to_keep_your_data_so_that_you_can_recover_it_until_you_decide_to_reactivate_your_account">• DSWD App will continue to keep your data so that you can recover it until you decide to reactivate your account.</string>
    <string name="information_that_isn_t_stored_in_your_account_such_as_previous_successful_transactions_may_still_be_visible_to_others">• Information that isn\'t stored in your account, such as previous successful transactions, may still be visible to others</string>
    <string name="all_transactions_that_involves_your_account_will_be_halted">• All transactions that involves your account will be halted.</string>
    <string name="no_one_can_search_your_account">• No one can search your account.</string>
    <string name="if_you_wish_to_learn_more_about_agricare_app_policies_and_terms_of_conditions">If you wish to learn more about DSWD App App privacy policies and terms of conditions:</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="von_denuelle_delete_your_account_permanently">• Von Denuelle, delete your account permanently?</string>
    <string name="if_you_delete_your_account_permanently">If you delete your account permanently:</string>
    <string name="you_may_cancel_the_deletion_request_by_loggin_in_the_same_details_and_reactivating_your_account">• You may cancel the deletion request within the span of 60 days by logging in the same details and reactivating your account.</string>
    <string name="your_account_and_information_across_the_app_will_be_deleted">• Your account and information across the app will be deleted.</string>
</resources>