<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home_title" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_wallet_title" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_group"
        android:title="@string/menu_groups_title" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_list"
        android:title="@string/menu_history_title" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings_title" />

</menu>