<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/inboundOutboundLinearLayout"
    android:padding="@dimen/dimen_16"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_inbound"/>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/dimen_16"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/inbound_title"
            android:textAlignment="center"
            android:textColor="@color/black_text"
            android:textSize="@dimen/font_16" />
        
        <TextView
            android:id="@+id/receivedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:text="@string/received_hint"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/font_14"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_gray"
                android:text="@string/inbound_outbound_refid_text"
                android:fontFamily="@font/inter_medium"
                android:layout_marginEnd="@dimen/dimen_4"
                android:textSize="@dimen/font_14"/>

            <TextView
                android:id="@+id/refidTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_primary"
                android:text="@string/refid_hint"
                android:fontFamily="@font/inter_semibold"
                android:textSize="@dimen/font_14"/>

        </LinearLayout>

        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:text="@string/date_and_time_hint"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/font_14"/>

    </LinearLayout>

</LinearLayout>