<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical">

    <View
        android:layout_width="@dimen/dimen_50"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_30"
        android:background="@drawable/bg_edittext_normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/lbl_confirm"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/font_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_20"
        android:background="@color/bg_edittext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/request_points_title"
            android:textColor="@color/black_text"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter_bold"
            android:textAlignment="textEnd"
            android:text="@string/lbl_0"
            android:textColor="@color/green"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/confirm_request_to_text"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/font_16" />

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:layout_marginStart="@dimen/dimen_4"
            android:text="@string/confirm_request_malasakit_family_text"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_16" />

    </LinearLayout>

    <TextView
        android:id="@+id/reasonTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginHorizontal="@dimen/dimen_20"
        android:fontFamily="@font/inter_regular"
        android:maxLines="3"
        android:text="@string/sample_lorem_ipsum"
        android:textAlignment="textStart"
        android:textColor="@color/commons_lbl"
        android:textSize="@dimen/font_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:layout_margin="@dimen/dimen_20"
        android:background="@color/bg_edittext" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/postRequestButton"
            style="@style/MyButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_20"
            android:layout_marginBottom="@dimen/dimen_20"
            android:backgroundTint="@color/color_primary"
            android:enabled="true"
            android:fontFamily="@font/inter_semibold"
            android:paddingTop="@dimen/dimen_15"
            android:paddingBottom="@dimen/dimen_15"
            android:text="@string/post_request_title"
            android:textAllCaps="false"
            android:textSize="@dimen/font_14" />
    </RelativeLayout>


</LinearLayout>